migrate to spring boot 3 and hibernate 6