@@ -9,7 +9,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import javax.transaction.Transactional;
+import jakarta.transaction.Transactional;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -61,6 +61,6 @@ public class CommunityServiceImpl implements CommunityService {
     public List<CommunityDto> getCommunities() {
         return communityRepository.findAll().stream()
                 .map(communityMapper::asFullDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
